--- a/work.tex
+++ b/work.tex
@@ -47,6 +47,19 @@
 \usepackage{makeidx}
 \usepackage{pdfsync}
 \usepackage{epstopdf}
+% pacotes do Thyago
+\usepackage{tikz}
+\usetikzlibrary{chains}
+
+\usepackage{epsfig,enumerate,subfigure,multirow}
+
+\usepackage{wrapfig}
+
+\setlength{\hoffset}{-1cm}
+\setlength{\voffset}{-1cm}
+\setlength{\textheight}{24cm}
+\setlength{\textwidth}{16cm}
+
 \usepackage[final]{pdfpages}
 \makeindex
 %   \topsep - amount of extra vertical space at top of list
