--- a/cap1.tex
+++ b/cap1.tex
@@ -1,37 +1,68 @@
-\chapter{Introducao}
+\chapter{Introdução}
 \label{cap:introduction}
 
-THYAGO vai fazer a parte introdutória até as tecnologias.
-Ele ja sabe o que fazer.
+\section{Objetivo}
 
-\section{História}
-\label{sec:history}
-Thyago
+O objetivo deste trabalho é fazer uma breve explanação sobre as principais tecnologias de transporte óptico, explicitando os aspectos técnicos de cada uma.
 
-\section{Objetivos}
-\label{sec:obj}
-Thyago
-\section{Metodologia}
-\label{sec:methodology}
-Thyago
+\section{Introdução}
 
-\chapter{Plano de Controle}
-\label{cap:control}
+De um ponto de vista geral, os sistemas de comunicações podem ser organizados em um hierarquia de camadas, tal como observado na figura \ref{fig:Camadas}, na qual cada segmentação permite o encapsulamento dos dados e assegura uma transmissão confiável e transparente. Neste contexto, o cliente insere tráfego de dados, vídeo e voz, utilizando a camada física como caminho interligando diversos nós na rede. Cada camada, encapsula informação útil a ser enviada, e para que a comunicação seja eficaz, é necessário que os protocolos de interfaceamento estejam bem definidos.
 
-Alaelson
+Na camada de transporte, os protocolos mais utilizados atualmente em redes ópticas são: Rede Óptica Síncrona- SONET (do inglês, {\it Synchonous Optical Network}), Hierarquia Digital Síncrona - SDH(do inglês, {\it Synchonous Digital Hierarchy}), IP e ATM. SONET e SDH surgiram quase que simultaneamente por volta da década de 80, na América do Norte e Europa, respectivamente, devido a necessidade das companhias telefônicas em conectar suas redes e são utilizadas amplamente até hoje.
 
-\section{GMPLS}
-\label{sec:gmpls}
-Alaelson
-\section{SDN}
-\label{sec:sdn}
-Alaelslon
+\begin{figure}[!htb]
 
-\chapter{Estudo de Caso: SuperComputing 2014}
-\label{cap:case}
-falar do chip otn da padtec
-Alaelson
-\chapter{Conclusão}
-\label{cap:conclusion}
+\begin{center}
 
-Thyago
+\begin{tikzpicture}[
+	scale=0.75,
+	start chain=1 going below, 
+	start chain=2 going right,
+	node distance=1mm,
+	desc/.style={
+		scale=0.75,
+		on chain=2,
+		rectangle,
+		rounded corners,
+		draw=black, 
+		very thick,
+		text centered,
+		text width=8cm,
+		minimum height=12mm,
+		fill=blue!40
+		},
+	it/.style={
+		fill=blue!10
+	},
+	level/.style={
+		scale=0.75,
+		on chain=1,
+		minimum height=12mm,
+		text width=2cm,
+		text centered
+	},
+	every node/.style={font=\rm}
+]
+
+% Levels
+\node [level] (Level 5) {Camada 5};
+\node [level] (Level 4) {Camada 4};
+\node [level] (Level 3) {Camada 3};
+\node [level] (Level 2) {Camada 2};
+\node [level] (Level 1) {Camada 1};
+
+
+% Descriptions
+\chainin (Level 5); % Start right of Level 5
+% IT levels
+\node [desc, it] (Archives) {Aplicação};
+\node [desc, it, continue chain=going below] (ERP) {Redes};
+\node [desc] {Enlace};
+\node [desc] {Transporte};
+\node [desc] {Física};
+
+\end{tikzpicture}
+\caption{Hierarquia de camadas nos sistemas de comunicações \label{fig:Camadas}}
+\end{center}
+\end{figure}
