--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -157,53 +157,46 @@ Universidade Estadual de Campinas}
 \frame{
 \frametitle{Estrutura do \textit{Frame} SDH}
 \begin{itemize}
-		\item Característica - \textit{Frame} bidimensional:
 		\begin{figure}[H]
 		 \centering
 			 \includegraphics[scale=.38]{FrameSDH.png}
-		  \caption{Estrutura do \textit{frame} SDH - Fonte: ITU-T G.707~\cite{G707}.}
+		  %\caption{Estrutura do \textit{frame} SDH - Fonte: ITU-T G.707~\cite{G707}.}
      \label{fig:FrameSDH}
     \end{figure}
-		
+		\begin{center}
+				\tiny{Fonte: Recomendação ITU-T G.707~\cite{G707}}
+		\end{center}
 \end{itemize}
 }
 
 \frame{
-\frametitle{Camadas de SDH}
+\frametitle{Camadas do protocolo SDH}
 \begin{itemize}
-			\item Estruturação em camadas~\cite{Alwayn2004}:
-			\begin{figure}[H]
-			 \centering
-       \includegraphics[scale=.57]{SDHlayers.png}
-        \caption{Estruturação em Camadas de SDH - Fonte: Bernal Filho, 2003~\cite{BernalFilho2003}.}
-       \label{fig:SDHlayers}
-      \end{figure}
-\end{itemize}
-}
-
-\frame{
-\frametitle{Camadas de SDH}
-\begin{itemize}
-			\item Estruturação em camadas~\cite{Alwayn2004}:
+			\item Esquema de Multiplexação de camadas~\cite{Alwayn2004}:
 			\begin{figure}[H]
 			 \centering
        \includegraphics[scale=.5]{SDHlayers.png}
-        \caption{Estruturação em Camadas de SDH - Fonte: Bernal Filho, 2003~\cite{BernalFilho2003}.}
-       \label{fig:SDHlayers}
+        %\{Estruturação em Camadas de SDH - 
+				\label{fig:SDHlayers}
       \end{figure}
+			\begin{center}
+			\tiny{Fonte: (Bernal Filho, 2003)~\cite{BernalFilho2003}.}
+			\end{center}
 \end{itemize}
 }
 
 \frame{
-\frametitle{Camadas de SDH}
+\frametitle{Camadas do protocolo SDH}
 \begin{itemize}
-			\item Relação entre camadas e os dispositivos de um \textit{link}:
 			\begin{figure}[H]
 		  	\centering
          \includegraphics[scale=.5]{SDHlayersConection.png}
-        \caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - Fonte: Bernal Filho, 2003 ~\cite{BernalFilho2003}.}
+        %\caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - Fonte: Bernal Filho, 2003 ~\cite{BernalFilho2003}.}
        \label{fig:SDHlayersConection}
-      \end{figure} 
+      \end{figure}
+			\begin{center}
+			\tiny{Fonte: (Bernal Filho, 2003)~\cite{BernalFilho2003}}
+			\end{center}
 \end{itemize}
 }
 
