--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -156,7 +156,6 @@ Universidade Estadual de Campinas}
 
 \frame{
 \frametitle{Estrutura do \textit{Frame} SDH}
-\begin{itemize}
 		\begin{figure}[H]
 		 \centering
 			 \includegraphics[scale=.38]{FrameSDH.png}
@@ -166,13 +165,12 @@ Universidade Estadual de Campinas}
 		\begin{center}
 				\tiny{Fonte: Recomendação ITU-T G.707~\cite{G707}}
 		\end{center}
-\end{itemize}
 }
 
 \frame{
 \frametitle{Camadas do protocolo SDH}
 \begin{itemize}
-			\item Esquema de Multiplexação de camadas~\cite{Alwayn2004}:
+			\item Esquema de Multiplexação de camadas:
 			\begin{figure}[H]
 			 \centering
        \includegraphics[scale=.5]{SDHlayers.png}
@@ -187,17 +185,15 @@ Universidade Estadual de Campinas}
 
 \frame{
 \frametitle{Camadas do protocolo SDH}
-\begin{itemize}
-			\begin{figure}[H]
-		  	\centering
-         \includegraphics[scale=.5]{SDHlayersConection.png}
-        %\caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - Fonte: Bernal Filho, 2003 ~\cite{BernalFilho2003}.}
-       \label{fig:SDHlayersConection}
-      \end{figure}
-			\begin{center}
-			\tiny{Fonte: (Bernal Filho, 2003)~\cite{BernalFilho2003}}
-			\end{center}
-\end{itemize}
+		\begin{figure}[H]
+			\centering
+			 \includegraphics[scale=.5]{SDHlayersConection.png}
+			%\caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - Fonte: Bernal Filho, 2003 ~\cite{BernalFilho2003}.}
+		 \label{fig:SDHlayersConection}
+		\end{figure}
+		\begin{center}
+		\tiny{Fonte: (Bernal Filho, 2003)~\cite{BernalFilho2003}}
+		\end{center}
 }
 
 \frame{
