--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -185,6 +185,8 @@ Universidade Estadual de Campinas}
 
 \frame{
 \frametitle{Camadas do protocolo SDH}
+\begin{itemize}
+	\item Relacionamento longitudinal entre os elementos de rede:
 		\begin{figure}[H]
 			\centering
 			 \includegraphics[scale=.5]{SDHlayersConection.png}
@@ -194,19 +196,7 @@ Universidade Estadual de Campinas}
 		\begin{center}
 		\tiny{Fonte: (Bernal Filho, 2003)~\cite{BernalFilho2003}}
 		\end{center}
-}
-
-\frame{
-\frametitle{Camadas de SDH}
-\begin{itemize}
-			\item Relação entre camadas e os dispositivos de um \textit{link}:
-			\begin{figure}[H]
-		  	\centering
-         \includegraphics[scale=.5]{SDHlayersConection.png}
-        \caption{Exemplo de link SDH Ilustrando as Terminações das Camadas - Fonte: Bernal Filho, 2003 ~\cite{BernalFilho2003}.}
-       \label{fig:SDHlayersConection}
-      \end{figure} 
-\end{itemize}
+	\end{itemize}
 }
 
 \subsection{A rede de transporte ótica (OTN)}
