SONET/SDH - Parte Completa

--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -199,6 +199,22 @@ Universidade Estadual de Campinas}
 	\end{itemize}
 }
 
+\frame{
+\frametitle{Camadas do protocolo SDH}
+\begin{itemize}
+	\item Camada Física:
+		\begin{figure}[H]
+		 \centering
+      \includegraphics[scale=.3]{PhysicalSDH.png}
+     %\caption{Diferentes Interfaces Físicas para SDH - ~\cite{Ramaswami2010}.}
+    \label{fig:PhysicalSDH}
+   \end{figure}
+	\begin{center}
+	 \tiny{Fonte: (Bernal Filho, 2003)~\cite{BernalFilho2003}}
+	\end{center}
+\end{itemize}
+}
+
 \subsection{A rede de transporte ótica (OTN)}
 \frame{
 \frametitle{A rede de transporte ótica (OTN)}
