--- a/referencias.bib
+++ b/referencias.bib
@@ -1,6 +1,13 @@
 % This file was created with JabRef 2.5.
 % Encoding: Cp1252
 
+@MISC{netflix,
+title = {{GLOBAL INTERNET PHENOMENA REPORT}},
+author = {Sundvine},
+howpublished = {\url{https://www.sandvine.com/downloads/general/global-internet-phenomena/2014/1h-2014-global-internet-phenomena-report.pdf}},
+note = {Acessado em 16/06/15}
+}
+
 @BOOK{agrawal2005lightwave,
   title = {{Lightwave technology: telecommunication systems}},
   publisher = {Wiley-Blackwell},
