line removed befone frame sumario

--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -17,7 +17,7 @@
 
 \title[Transporte 2]{Protocolos para redes óticas de transporte}
 \subtitle{
-\textit{Disciplina de Redes Óticas - IE008}}
+\textit{Disciplina de Redes Óticas}}
 %\author[Alaelson Fábio\linebreak Isaac\linebreak Lailson Thyago]{Alaelson Jatobá\linebreak
 \author[]{Alaelson Jatobá\linebreak
 Fábio Barbosa\linebreak
@@ -29,7 +29,7 @@ Faculdade de Eng. Elétrica e Computação\linebreak
 Universidade Estadual de Campinas} 
 \date{17 de junho de 2015} 
 
-\pgfdeclareimage[height=1.5cm]{logo}{figuras/logo_unicamp_}
+\pgfdeclareimage[height=1.5cm]{logo}{figuras/logo_unicamp_branco}
 \logo{\pgfuseimage{logo}}
 
 
@@ -47,8 +47,6 @@ Universidade Estadual de Campinas}
 \frame{
 \titlepage
 }
-
-
 
 \section[Sumário]{}
 \frame{
@@ -99,80 +97,10 @@ Universidade Estadual de Campinas}
 	
 }
 
-\subsection{SONET/SDH}
+\subsection{Sonet/SDH}
 \frame{
-\frametitle{Tecnologia SONET/SDH}
-\begin{itemize}
-		\item Limitações da tecnologia de transporte PDH.
-		\vspace{\baselineskip}
-		\item Pesquisa iniciada pela \textit{Exchange Carriers Standards Association} (ECSA):
-		\begin{itemize}
-				\item Início da pesquisa no ano de 1984.
-				%\item Proposta para o \textit{American National Standards Institute} (ANSI).
-				\item Inicio da padronização de \textit{Synchronous Optical Networking} (SONET) no ano de 1985~\cite{Ballart2002}.
-		\end{itemize}
-		\vspace{\baselineskip}
-		\item \textit{International Telecommunication Union - Telecommunication Standardization Sector} (ITU-T).
-		\begin{itemize}
-				\item Interesse no padrão SONET~\cite{Boehm1990}.
-				\item Propôs mudanças.
-				\item Definição do padrão \textit{Synchronous Digital Hierarchy} (SDH).
-		\end{itemize}
-		
-\end{itemize}
-}
-
-\frame{
-\frametitle{Tecnologia SONET/SDH}
-\begin{itemize}
-		\item SONET e SDH guardam os mesmos conceitos tecnológicos.
-		\vspace{\baselineskip}
-		\item Principais diferenças entre SONET e SDH:
-		\begin{itemize}
-				\item Denominações de alguns parâmetros.
-				\item Taxas de transmissão das hierarquias.
-		\end{itemize}
-		\vspace{\baselineskip}
-		\item SONET/SDH possuem vantagens em relação ao PDH.
-\end{itemize}
-}
-
-\frame{
-\frametitle{Tecnologia SONET/SDH}
-\begin{itemize}
-		\item As vantagens da tecnologia SONET/SDH sobre PDH são:
-		\begin{itemize}
-				\vspace{\baselineskip}
-				\item Simplificações no processo de multiplexação.
-				\vspace{\baselineskip}
-				\item Informações de Gerenciamento.
-				\vspace{\baselineskip}
-				\item Interoperabilidade.
-				\vspace{\baselineskip}
-				\item Disponibilidade da rede.
-		\end{itemize}
-\end{itemize}
-}
-
-\frame{
-\frametitle{Estrutura do \textit{Frame} SDH}
-\begin{itemize}
-		\item Característica - \textit{Frame} bidimensional:
-		\begin{figure}[H]
-		 \centering
-			 \includegraphics[scale=.38]{FrameSDH.png}
-		  \caption{Estrutura do \textit{frame} SDH - ITU-T G.707~\cite{G707}.}
-     \label{fig:FrameSDH}
-    \end{figure}
-		
-\end{itemize}
-}
-
-\frame{
-\frametitle{Camadas de SDH}
-\begin{itemize}
-			\ite 	
-\end{itemize}
+\frametitle{Os protocolos Sonet/SDH}
+	
 }
 
 \subsection{A rede de transporte ótica (OTN)}
@@ -382,7 +310,7 @@ Quadro da OTN:
 \section{Estudo de Caso}
 \frame{ 
 \frametitle{\textit{Super Computing 2014}}  
-\cite{Ramaswami2010}
+
 }
 
 \frame{ 
@@ -393,12 +321,9 @@ Quadro da OTN:
 \end{center}
 }
 
-\section{Referências Bibliográficas}
 \frame{
-\frametitle{Referências Bibliográficas}
-%\addcontentsline{toc}{chapter}{\numberline{}Referências Bibliográficas}
-\bibliographystyle{IEEEtran}
-\bibliography{artigos,referencias,rfc}
+\transdissolve<1>[duration=0.3]
+\titlepage
 }
 
 \end{document}
