--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -30,7 +30,7 @@ Faculdade de Eng. Elétrica e Computação\linebreak
 Universidade Estadual de Campinas} 
 \date{17 de junho de 2015} 
 
-\pgfdeclareimage[height=1.5cm]{logo}{figuras/logo_unicamp_}
+\pgfdeclareimage[height=1.5cm]{logo}{figuras/logo_unicamp_branco}
 \logo{\pgfuseimage{logo}}
 
 
