Corrigindo o uso de aspas duplas
Dica: antes por duas crases ( `` ) e depois dois apóstrofos ( '' ).

--- a/cap2.tex
+++ b/cap2.tex
@@ -41,7 +41,7 @@ O PDH utiliza uma multiplexação assíncrona, na qual cada terminal tem seu própri
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{image/mux_pdh.eps}
-\caption{\label{fig:muxPDH} Estrutura de multiplexação PDH: a "montanha de multiplexadores". Adaptado de \cite{Ramaswami2010}.}
+\caption{\label{fig:muxPDH} Estrutura de multiplexação PDH: a ``montanha de multiplexadores''. Adaptado de \cite{Ramaswami2010}.}
 \end{figure}
 
 \section{SONET/SDH}
