--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -20,9 +20,9 @@ A seguir, serão abordadas características importantes referentes a SDH. Porém, o
 
 \subsection{Multiplexação SONET}
 
-Ambos SONET e SDH usam métodos de multiplexação bastante sofisticados que podem ser implementados em circuitos integrados de longa escala. Comparando a figura \ref{fig:muxSDH} com a figura \ref{fig:muxPDH}, é possível notar a diferença de complexidade entre as redes SONET/SDH e PDH. Somente um componente é necessário para fazer o que a "montanha de multiplexadores" faz no PDH.
+Ambos SONET e SDH usam métodos de multiplexação bastante sofisticados que podem ser implementados em circuitos integrados de longa escala. Comparando a figura \ref{fig:muxSDH} com a figura \ref{fig:muxPDH}, é possível notar a diferença de complexidade entre as redes SONET/SDH e PDH. Somente um componente é necessário para fazer o que a ``montanha de multiplexadores'' faz no PDH.
 
-Para SONET a taxa de sinal básica é $51,84 \, Mb/s$, chamada de "\textit{synchronous transport signal level-1}" ou STS-1. As outras taxas derivadas desta são chamadas STS-N e são obtidas alternando os bytes de N  \textit{frames} STS-1 alinhados. Como os \textit{clocks} dos sinais são sincronizados, não há necessidade de inserção de bits. Por esse mesmo motivo, sinais de taxas menores podem ser extraídos de um fluxo multiplexado sem necessidade de demultiplexar o sinal inteiro. A tabela \ref{tab:taxasSONET} traz as taxas de transmissão e nomenclatura SONET.
+Para SONET a taxa de sinal básica é $51,84 \, Mb/s$, chamada de \textit{synchronous transport signal level-1} ou STS-1. As outras taxas derivadas desta são chamadas STS-N e são obtidas alternando os bytes de N  \textit{frames} STS-1 alinhados. Como os \textit{clocks} dos sinais são sincronizados, não há necessidade de inserção de bits. Por esse mesmo motivo, sinais de taxas menores podem ser extraídos de um fluxo multiplexado sem necessidade de demultiplexar o sinal inteiro. A tabela \ref{tab:taxasSONET} traz as taxas de transmissão e nomenclatura SONET.
 
 \begin{figure}[H]
 \centering
